--- a/index.html
+++ b/index.html
@@ -205,15 +205,62 @@
         </div>
       </section>
 
-      <section>
+      <section class="review_color">
+
+        <div class="review container">
+          <p class="review_text">Я надолго запомню мой День рождения, проведённый в этом ресторане! Кусочек родной
+            Армении!!! Отдельное спасибо за комплепент в виде фруктовой тарелки. Будем рекомендовать этот ресторан своим
+            друзьям и родственникам также за рубежом, путешествующих в Санкт-Петербург!!!</p>
+          <figure><img class="review_photo" src="img/beard.png" alt="#"></figure>
+          <figcaption class="review_caption">Посетитель</figcaption>
+          <p class="review_name">Николай</p>
+          <ul class="review_list">
+            <li class="review_list_items"> </li>
+            <li class="review_list_items"> </li>
+            <li class="review_list_items"> </li>
+          </ul>
+        </div>
 
       </section>
 
-      <section>
+      <section class="food_gallery">
+        <h2 class="food_gallery_heading about_us_heading">Галерея <span class="orange">Блюд</span></h2>
+
+        <div class="food_pictures container">
+
+          <div class="first_row">
+            <img class="table1" src="img/table.png" alt="#">
+            <div class="second_row">
+              <img src="img/coffee.png" alt="#">
+              <img src="img/goulash.png" alt="">
+            </div>
+          </div>
+
+          <div class="first_row">
+            <div class="second_row">
+              <img src="img/coffee.png" alt="#">
+              <img src="img/goulash.png" alt="">
+            </div>
+            <img class="table2" src="img/table.png" alt="#">
+          </div>
+
+        </div>
 
       </section>
 
-      <section>
+      <section class="our_cooks container">
+
+        <h2 class="our_cooks_heading about_us_heading">Наши <span class="orange">Повара</span></h2>
+        <div class="our_cooks_img">
+          <img class="cook_item" src="img/cook-1.png" alt="">
+          <img class="cook_item" src="img/pizza-3.png" alt="">
+          <img class="cook_item" src="img/image.png" alt="">
+        </div>
+
+        <ul class="our_cook_list">
+          <li class="our_cook_items"> </li>
+          <li class="our_cook_items"> </li>
+        </ul>
 
       </section>
 
@@ -223,6 +270,7 @@
 
     </footer>
   </div>
+
 </body>
 
 </html>
