--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
       </section>
 
-      <section class="our_food container">
+      <section class="our_food">
         <h1 class="about_us_heading">Наши <span class="orange">Блюда</span></h1>
 
         <div class="our_food_img">
@@ -142,21 +142,27 @@
           <ul class="ham_list">
             <li class="ham_item">
               <img class="ham_img" src="img/hamburger.png" alt="#">
-              <p class="ham_txt">Гамбургер мини</p>
-              <div class="line"></div>
-              <p class="ham_txt">220 ₽</p>
+              <div class="ham_block">
+                <p class="ham_txt">Гамбургер мини</p>
+                <div class="line"></div>
+                <p class="ham_txt">220 ₽</p>
+              </div>
             </li>
             <li class="ham_item">
               <img class="ham_img" src="img/hamburger.png" alt="#">
-              <p class="ham_txt">Гамбургер мини</p>
-              <div class="line"></div>
-              <p class="ham_txt">220 ₽</p>
+              <div class="ham_block">
+                <p class="ham_txt">Гамбургер мини</p>
+                <div class="line"></div>
+                <p class="ham_txt">220 ₽</p>
+              </div>
             </li>
             <li class="ham_item">
               <img class="ham_img" src="img/hamburger.png" alt="#">
-              <p class="ham_txt">Гамбургер мини</p>
-              <div class="line"></div>
-              <p class="ham_txt">220 ₽</p>
+              <div class="ham_block">
+                <p class="ham_txt">Гамбургер мини</p>
+                <div class="line"></div>
+                <p class="ham_txt">220 ₽</p>
+              </div>
             </li>
           </ul>
 
@@ -223,29 +229,30 @@
 
       </section>
 
-      <section class="food_gallery">
-        <h2 class="food_gallery_heading about_us_heading">Галерея <span class="orange">Блюд</span></h2>
+      <section class="food_gallery_red">
+        <div class="food_gallery container">
+          <h2 class="food_gallery_heading about_us_heading">Галерея <span class="orange">Блюд</span></h2>
 
-        <div class="food_pictures container">
+          <div class="food_pictures container">
 
-          <div class="first_row">
-            <img class="table1" src="img/table.png" alt="#">
-            <div class="second_row">
-              <img src="img/coffee.png" alt="#">
-              <img src="img/goulash.png" alt="">
+            <div class="first_row">
+              <img class="table1" src="img/table.png" alt="#">
+              <div class="second_row">
+                <img class="sec_row_img" src="img/coffee.png" alt="#">
+                <img class="sec_row_img" src="img/goulash.png" alt="">
+              </div>
             </div>
-          </div>
 
-          <div class="first_row">
-            <div class="second_row">
-              <img src="img/coffee.png" alt="#">
-              <img src="img/goulash.png" alt="">
+            <div class="first_row">
+              <div class="second_row">
+                <img class="sec_row_img" src="img/coffee.png" alt="#">
+                <img class="sec_row_img" src="img/goulash.png" alt="">
+              </div>
+              <img class="table2" src="img/table.png" alt="#">
             </div>
-            <img class="table2" src="img/table.png" alt="#">
-          </div>
 
+          </div>
         </div>
-
       </section>
 
       <section class="our_cooks container">
