--- a/index.html
+++ b/index.html
@@ -230,10 +230,14 @@
       </section>
 
       <section class="food_gallery_red">
+
+        <div class="red_rectangle_1"></div>
+        <div class="red_rectangle_2"></div>
+
         <div class="food_gallery container">
           <h2 class="food_gallery_heading about_us_heading">Галерея <span class="orange">Блюд</span></h2>
 
-          <div class="food_pictures container">
+          <div class="food_pictures">
 
             <div class="first_row">
               <img class="table1" src="img/table.png" alt="#">
