--- a/index.html
+++ b/index.html
@@ -57,25 +57,25 @@
     </header>
 
     <main>
-      <section class="card container">
+      <div class="card container">
 
         <ul class="intro">
           <li class="intro_items">
             <figure class="intro_img"><img src="img/Mask_Group.png" alt="#"></figure>
-            <figcaption class="intro_cap">Магическая <span class="beige">Атмосфера</span></figcaption>
+            <div class="intro_cap">Магическая <span class="beige">Атмосфера</span></div>
             <p class="intro_txt">В нашем заведении царит магическая атмосфера
               наполненная вкусными ароматами</p>
           </li>
           <li class="intro_items">
             <figure class="intro_img"><img src="img/Mask_Group.png" alt="#"></figure>
-            <figcaption class="intro_cap">Лучшее качество <span class="beige">Еды</span></figcaption>
+            <div class="intro_cap">Лучшее качество <span class="beige">Еды</span></div>
             <p class="intro_txt">Качество нашей<br>
               Еды - отменное!
             </p>
           </li>
           <li class="intro_items">
             <figure class="intro_img"><img src="img/Mask_Group.png" alt="#"></figure>
-            <figcaption class="intro_cap">Недорогая <span class="beige">Еда</span></figcaption>
+            <div class="intro_cap">Недорогая <span class="beige">Еда</span></div>
             <p class="intro_txt">Стоимость нашей Еды
               зависит только от ее
               количества. Качество
@@ -83,7 +83,7 @@
           </li>
         </ul>
 
-      </section>
+      </div>
 
       <section class="about_us container">
 
@@ -178,7 +178,7 @@
               <div class="recommended">RECOMMENDED</div>
               <div class="menu_img_price">
                 <figure><img class="menu_image" src="img/ham.png" alt="#"></figure>
-                <figcaption class="menu_name_of_ham">Гамбургер макси</figcaption>
+                <div class="menu_name_of_ham">Гамбургер макси</div>
                 <p class="menu_price">420</p>
               </div>
               <p class="menu_description">Максимально толстый
@@ -189,7 +189,7 @@
 
               <div class="menu_img_price">
                 <figure><img class="menu_image" src="img/ham.png" alt="#"></figure>
-                <figcaption class="menu_name_of_ham">Гамбургер макси</figcaption>
+                <div class="menu_name_of_ham">Гамбургер макси</div>
                 <p class="menu_price">420</p>
               </div>
               <p class="menu_description">Максимально толстый
@@ -200,7 +200,7 @@
 
               <div class="menu_img_price">
                 <figure><img class="menu_image" src="img/ham.png" alt="#"></figure>
-                <figcaption class="menu_name_of_ham">Гамбургер макси</figcaption>
+                <div class="menu_name_of_ham">Гамбургер макси</div>
                 <p class="menu_price">420</p>
               </div>
               <p class="menu_description">Максимально толстый
@@ -211,14 +211,14 @@
         </div>
       </section>
 
-      <section class="review_color">
+      <div class="review_color">
 
         <div class="review container">
           <p class="review_text">Я надолго запомню мой День рождения, проведённый в этом ресторане! Кусочек родной
             Армении!!! Отдельное спасибо за комплепент в виде фруктовой тарелки. Будем рекомендовать этот ресторан своим
             друзьям и родственникам также за рубежом, путешествующих в Санкт-Петербург!!!</p>
           <figure><img class="review_photo" src="img/beard.png" alt="#"></figure>
-          <figcaption class="review_caption">Посетитель</figcaption>
+          <div class="review_caption">Посетитель</div>
           <p class="review_name">Николай</p>
           <ul class="review_list">
             <li class="review_list_items"> </li>
@@ -227,7 +227,7 @@
           </ul>
         </div>
 
-      </section>
+      </div>
 
       <section class="food_gallery_red">
 
